syntax = "proto3";

package notification;

import "commons.proto";

message Notification {
  int32 id = 1;
  string status = 2;
  int32 customerId = 3;
  int32 branchServiceId = 4;
  string startTime = 5;
  string endTime = 6;
  int32 duration = 7;
  string createdAt = 8;
  string updatedAt = 9;
  optional string note = 10;
  int32 merchantId = 11;
  int32 branchId = 12;
  optional bool isCustomerCancel = 13;
  optional string cancelReason = 14;
  string bookingDate = 15;
  optional bool isAdminUpdate = 16;
  optional int32 adminUpdateId = 17;
  optional string serviceName = 18;
  optional string customerName = 19;
  optional string customerEmail = 20;
  optional string customerAddress = 21;
}

message NotificationEdge {
  Notification node = 1;
  string cursor = 2;
}

message FindAllBookingsPagination {
  repeated Notification items = 1;
  int32 page = 2;
  int32 totalPage = 3;
  int32 total = 4;
  int32 limit = 5;
}

service BookingServiceGrpc {
  rpc findAll (commons.QueryRequest) returns (FindAllBookingsPagination) {}
}